--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: SF Pro Display, SF Pro Icons, Arial, Helveticas, Helvetica Neue,
+    sans-serif;
 }
 
 a {
