--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,8 +8,6 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: SF Pro Display, SF Pro Icons, Roboto, Arial, Helveticas,
-    Helvetica Neue, sans-serif;
 }
 
 a {
